--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,7 +12,7 @@ div#wall div#tag-3.slick {
   display: none;
 }
 
-#wall .parent #tag-4{
+div#wall .parent #tag-4{
   display: none;
 }
 
@@ -20,6 +20,6 @@ div#wall .parent div#tag-5.slick{
   display: none;
 }
 
-div#wall div.parent div#tag-6 {
+div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
